# stmharry-monorepo

./: .pre-commit-config.yaml  README.md  pyproject.toml
stmharry/: __init__.py  configs.py  logging.py
stmharry/database/: __init__.py  core.py  pypika_dialects.py  schemas.py  stores.py
stmharry/rust/: __init__.py  result.py
tests/: test_results.py
