[tool.poetry]
name = "stmharry"
version = "0.1.0"
description = ""
authors = ["Harry H <h@stmharry.io>"]
readme = "README.md"
packages = [
    { include = "stmharry" },
]

[tool.poetry.dependencies]
python = "^3.11"
absl-py = "^1.4.0"
pydantic = "^2.5.3"
pyyaml = "^6.0.1"
rich = "^13.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.1"
types-pyyaml = "^6.0.12.12"
pytest = "^7.4.3"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.pyright]
include = ["app"]
exclude = ["**/__pycache__"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
